# GPTerminal

./: .gitignore  .gitmodules  GPTerminal.sln  README.md
GPTerminal/: CMakeLists.txt  CMakeUserPresets.json  GPTerminal.vcxproj  GPTerminal.vcxproj.filters  Source.cpp  TabSelector.cpp  TabSelector.h  vcpkg-configuration.json  vcpkg.json
GPTerminal/include/: AiCompletionService.h  ChatApi.h  ClaudeApi.h  Component.h  Frame.h  GeminiApi.h  HLine.h  Loader.h  OpenAIInterface.h  OpenAIService.h  OpenAiApi.h  PowerTUI.h  Result.h  TabSelector.h  TextManipulation.h
GPTerminal/src/: AiCompletionService.cpp  CMakeLists.txt  ClaudeApi.cpp  Frame.cpp  GeminiApi.cpp  OpenAIService.cpp  OpenAiApi.cpp  Source.cpp  TabSelector.cpp  TextManipulation.cpp
GPTerminal/test/: CMakeLists.txt  TextManipulation_test.cpp
